--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "html-to-image": "^1.11.12",
     "lucide-react": "^0.475.0",
     "next": "14.2.16",
+    "posthog-js": "^1.217.4",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.15.1",
@@ -29,6 +30,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@svgr/cli": "^8.1.0",
     "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -36,6 +38,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
     "postcss": "^8",
+    "sharp": "^0.33.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
