--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "recharts": "^2.15.1",
     "resend": "^4.1.2",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "@vercel/og": "latest"
   },
   "devDependencies": {
     "@svgr/cli": "^8.1.0",
