--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "datematch",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "NODE_OPTIONS=\"--loader ts-node/esm\" npx ts-node --esm scripts/generate-favicons.ts && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -28,7 +29,9 @@
     "resend": "^4.1.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "@vercel/og": "latest"
+    "@vercel/og": "latest",
+    "ts-node": "^10.9.1",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@svgr/cli": "^8.1.0",
@@ -39,7 +42,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
     "postcss": "^8",
-    "sharp": "^0.33.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
